--- a/LaporanToko/src/laporan/laporan_stok.jrxml
+++ b/LaporanToko/src/laporan/laporan_stok.jrxml
@@ -1,17 +1,71 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="null" language="groovy" pageWidth="595" pageHeight="842" columnWidth="535" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="9ff0d899-8870-4a0b-9052-0dd5e1ad11af">
-	<queryString language="SQL">
-		<![CDATA[SELECT * FROM tb_buku ORDER BY kode_buku asc]]>
+	<property name="ireport.zoom" value="1.0"/>
+	<property name="ireport.x" value="0"/>
+	<property name="ireport.y" value="0"/>
+	<parameter name="awal" class="java.util.Date">
+		<defaultValueExpression><![CDATA[]]></defaultValueExpression>
+	</parameter>
+	<parameter name="akhir" class="java.util.Date">
+		<defaultValueExpression><![CDATA[]]></defaultValueExpression>
+	</parameter>
+	<queryString>
+		<![CDATA[SELECT
+     *,
+     tb_keluar.`tanggal` AS tb_keluar_tanggal,
+     tb_keluar.`id_bk` AS tb_keluar_id_bk,
+     tb_keluar.`kode_buku` AS tb_keluar_kode_buku,
+     tb_keluar.`judul` AS tb_keluar_judul,
+     tb_keluar.`jumlah` AS tb_keluar_jumlah,
+     tb_masuk.`tanggal` AS tb_masuk_tanggal,
+     tb_masuk.`id_bm` AS tb_masuk_id_bm,
+     tb_masuk.`kode_buku` AS tb_masuk_kode_buku,
+     tb_masuk.`judul` AS tb_masuk_judul,
+     tb_masuk.`jumlah` AS tb_masuk_jumlah
+FROM
+     `tb_keluar` tb_keluar INNER JOIN `tb_barang` tb_barang ON tb_keluar.`kode_buku` = tb_barang.`kode_buku`
+     INNER JOIN `tb_masuk` tb_masuk ON tb_barang.`kode_buku` = tb_masuk.`kode_buku`]]>
 	</queryString>
+	<field name="tanggal" class="java.sql.Date">
+		<fieldDescription><![CDATA[]]></fieldDescription>
+	</field>
+	<field name="id_bk" class="java.lang.Integer">
+		<fieldDescription><![CDATA[]]></fieldDescription>
+	</field>
 	<field name="kode_buku" class="java.lang.Integer">
 		<fieldDescription><![CDATA[]]></fieldDescription>
 	</field>
 	<field name="judul" class="java.lang.String">
 		<fieldDescription><![CDATA[]]></fieldDescription>
 	</field>
+	<field name="jumlah" class="java.lang.Integer">
+		<fieldDescription><![CDATA[]]></fieldDescription>
+	</field>
+	<field name="pengarang" class="java.lang.String">
+		<fieldDescription><![CDATA[]]></fieldDescription>
+	</field>
+	<field name="penerbit" class="java.lang.String">
+		<fieldDescription><![CDATA[]]></fieldDescription>
+	</field>
+	<field name="genre" class="java.lang.String">
+		<fieldDescription><![CDATA[]]></fieldDescription>
+	</field>
 	<field name="stok" class="java.lang.Integer">
 		<fieldDescription><![CDATA[]]></fieldDescription>
 	</field>
+	<field name="id_bm" class="java.lang.Integer">
+		<fieldDescription><![CDATA[]]></fieldDescription>
+	</field>
+	<field name="tb_keluar_tanggal" class="java.sql.Date"/>
+	<field name="tb_keluar_id_bk" class="java.lang.Integer"/>
+	<field name="tb_keluar_kode_buku" class="java.lang.Integer"/>
+	<field name="tb_keluar_judul" class="java.lang.String"/>
+	<field name="tb_keluar_jumlah" class="java.lang.Integer"/>
+	<field name="tb_masuk_tanggal" class="java.sql.Date"/>
+	<field name="tb_masuk_id_bm" class="java.lang.Integer"/>
+	<field name="tb_masuk_kode_buku" class="java.lang.Integer"/>
+	<field name="tb_masuk_judul" class="java.lang.String"/>
+	<field name="tb_masuk_jumlah" class="java.lang.Integer"/>
 	<background>
 		<band/>
 	</background>
@@ -20,18 +74,18 @@
 			<frame>
 				<reportElement mode="Opaque" x="-20" y="-20" width="595" height="92" backcolor="#006699" uuid="3ae48489-f543-4c3a-a312-d0edb9109599"/>
 				<staticText>
-					<reportElement x="20" y="20" width="234" height="43" forecolor="#FFFFFF" uuid="346a5cea-49cd-4b1d-8a52-40b0628514a9"/>
+					<reportElement x="20" y="20" width="442" height="43" forecolor="#FFFFFF" uuid="346a5cea-49cd-4b1d-8a52-40b0628514a9"/>
 					<textElement>
-						<font size="34" isBold="true"/>
+						<font fontName="Garamond" size="34" isBold="true"/>
 					</textElement>
-					<text><![CDATA[TITLE]]></text>
+					<text><![CDATA[LAPORAN STOK BARANG]]></text>
 				</staticText>
 				<staticText>
-					<reportElement x="395" y="43" width="180" height="20" forecolor="#FFFFFF" uuid="d279f4bb-c95a-408d-b3ff-7f7d1d3871bf"/>
+					<reportElement x="395" y="63" width="180" height="20" forecolor="#FFFFFF" uuid="d279f4bb-c95a-408d-b3ff-7f7d1d3871bf"/>
 					<textElement textAlignment="Right">
-						<font size="14" isBold="false"/>
+						<font fontName="PMingLiU-ExtB" size="14" isBold="false"/>
 					</textElement>
-					<text><![CDATA[Add a description here]]></text>
+					<text><![CDATA[Toko Buku Full Sun]]></text>
 				</staticText>
 			</frame>
 		</band>
@@ -49,26 +103,26 @@
 				<textElement textAlignment="Center">
 					<font size="14" isBold="true"/>
 				</textElement>
-				<text><![CDATA[kode_buku]]></text>
+				<text><![CDATA[Kode Barang]]></text>
 			</staticText>
 			<staticText>
 				<reportElement mode="Opaque" x="185" y="0" width="185" height="20" forecolor="#006699" backcolor="#E6E6E6" uuid="ecf169d4-0142-45d4-8075-1a62d8602b39"/>
 				<textElement textAlignment="Center">
 					<font size="14" isBold="true"/>
 				</textElement>
-				<text><![CDATA[judul]]></text>
+				<text><![CDATA[Judul]]></text>
 			</staticText>
 			<staticText>
 				<reportElement mode="Opaque" x="370" y="0" width="185" height="20" forecolor="#006699" backcolor="#E6E6E6" uuid="237f5e6d-6283-48d3-a687-c10edbbe79ac"/>
 				<textElement textAlignment="Center">
 					<font size="14" isBold="true"/>
 				</textElement>
-				<text><![CDATA[stok]]></text>
+				<text><![CDATA[Stok Barang]]></text>
 			</staticText>
 		</band>
 	</columnHeader>
 	<detail>
-		<band height="20">
+		<band height="160">
 			<line>
 				<reportElement positionType="FixRelativeToBottom" x="0" y="19" width="555" height="1" uuid="fa105558-6ce3-4f95-a25f-6cbd78547c06"/>
 			</line>
@@ -99,7 +153,7 @@
 		<band/>
 	</columnFooter>
 	<pageFooter>
-		<band height="17">
+		<band height="21">
 			<textField>
 				<reportElement mode="Opaque" x="0" y="4" width="515" height="13" backcolor="#E6E6E6" uuid="064b48a1-fbe3-4e09-81bc-114fe3660880"/>
 				<textElement textAlignment="Right"/>
